# moff-cli

./: DEVELOPMENT_ROADMAP.md  README.md  main.py  markdown_test.md  pyproject.toml
moff-cli/: project_moff-cli.md  settings.json
moff-cli/check/: feature_check.md
moff-cli/check/fix/: feature_fix.md  tech_fix.md
moff-cli/check/save/: feature_save.md
moff-cli/collector/: feature_collector.md  tech_collector.md
moff-cli/settings/: feature_settings.md  tech_settings.md
moff-cli/tree/: feature_tree.md  tech_tree.md
moff_prompt/: moff_default_prompt.md
src/moff_cli/: __init__.py  __main__.py  cli.py
src/moff_cli/check/: __init__.py  check.py  fixer.py
src/moff_cli/collector/: collector.py
src/moff_cli/settings/: __init__.py  settings.py
src/moff_cli/tree/: tree.py
tests/: test_moff_cli.py
tests/test_check/: test_fixer.py  test_save.py  test_verbose.py
tests/test_settings/: test_settings.py
tests/test_tree/: test_tree.py
